--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "copy": "cp -R ./node_modules/@arcgis/core/assets ./dist/assets",
-    "start-pwa": "ng build --prod && http-server -p 8080 -c-1 dist/TourismApp"
+    "start-pwa": "ng build --prod && http-server -p 8080 -c-1 dist/TourismApp",
+    "deploy:gh": "ng build --base-href https://agmghazi.github.io/torismApp/",
+    "deploy:upload": "ngh --dir dist/",
+    "deploy:uploadWork": "ngh /dist/"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
